# svo-extactor

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
common/: logging.json  logging.py  typing.py  utils.py
common/tests/: __init__.py  reponse.py  spider.py  utils.py
data/: blacks_law-svo.csv  investopedia-svo.csv  investopedia.csv
facts/: __init__.py  cli.py  meta.py  settings.py
facts/exporters/: __init__.py  csv.py
facts/extractors/: __init__.py  components.py  svo.py
facts/handlers/: __init__.py  csv.py
facts/spiders/: __init__.py  blacks_law.py  investopedia.py
tests/: test_components.py  test_extractors.py  test_facts.py
tests/spiders/: test_blacks_law.py  test_investopedia.py
tests/spiders/responses/blacks_law/: detail.html
tests/spiders/responses/investopedia/: detail.html
