[tool.poetry]
name = "fact-extract"
version = "0.0.0"
description = "Extract facts from the internet as SVO triples"
authors = ["FinTech Studios <support@fintechstudios.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
scrapy = "^1.7"
textacy = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^19.3-beta.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
